# CSIMD

./: AVX.c  AVX.h  AVX2.c  AVX2.h  CMakeLists.txt  LICENSE  Macros.h  README.md  general.h
test/: divs.py  utils.h
test/AVX/: adds.c  general.h
test/AVX2/: cadd.c  cadd_complex128.c  cadd_complex64.c  cdiv.c  cdiv_complex128.c  cmul.c  cmul_complex128.c  cmul_complex64.c  divs.c  divs_complex128.c  divs_complex64.c  general.h  muls.c  muls_complex128.c  muls_complex64.c
test/check_utils/: divs.py  intrin.py
